[gd_scene load_steps=7 format=3 uid="uid://cjj0686dqo4j5"]

[ext_resource type="Script" uid="uid://ce0sqcyl61b02" path="res://_important/game_controller.gd" id="1_yc0us"]
[ext_resource type="PackedScene" uid="uid://bqomdt0ax1ysi" path="res://systems/locomotion/Player.tscn" id="3_d5mdm"]
[ext_resource type="PackedScene" uid="uid://cledvmiqwnwld" path="res://UI/PauseMenu.tscn" id="4_d5mdm"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3sg7c"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_m3mt1"]
sky_material = SubResource("ProceduralSkyMaterial_3sg7c")

[sub_resource type="Environment" id="Environment_x46mw"]
background_mode = 2
sky = SubResource("Sky_m3mt1")
tonemap_mode = 2
glow_enabled = true

[node name="GameController" type="Node3D"]
script = ExtResource("1_yc0us")
player_scene = ExtResource("3_d5mdm")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_x46mw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="World3D" type="Node3D" parent="."]

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" parent="GUI" instance=ExtResource("4_d5mdm")]
visible = false
layout_mode = 1
